$Id$                       -*-text-*-


**** 1.43 [unreleased]

	Update b.root-servers.net addresses in resolver hints.
	Improve accuracy and completeness of dependency metadata.
	Nameserver: hangs on persistent TCP connection (Windows).
	IPSECKEY: leave gateway undefined for gatetype 0.
	Remove remaining support for GOST.


**** 1.42 Dec 24, 2023

Fix rt.cpan.org #150695
	Hang in Net::DNS::Nameserver on Windows


**** 1.41 Nov 28, 2023

	Accept inbound Ethernet "Jumbo" UDP packet.
	Facilitate decoding of mDNS/SD packets with compressed RDATA.
	Update Parameters.pm to resync with IANA registry.

Fix rt.cpan.org #150550
	Error trying to use Socket macro SO_REUSEPORT in Windows


**** 1.40 Aug 30, 2023

	Add support for SVCB dohpath and ohttp parameters.
	More robust test of bgbusy() SpamAssassin workaround.

Fix rt.cpan.org #149456
	t/05-SOA.t test fails in 2038

Fix rt.cpan.org #149280
	Deep recursion on subroutine "Net::DNS::Resolver::Recurse::_recurse"


**** 1.39 Jun 1, 2023

Fix rt.cpan.org #148340
	udpsize uninitialized value


**** 1.38 May 9, 2023

	Mailbox.pm: Improve robustness of address parsing.
	Deprecate packet->edns->size() method.
	Deprecate rdatastr() historical RR subtype method.
	Major overhaul of pre-installation test scripts.
	Add new t/TestToolkit.pm
	Refactor socket code and control structure in
	Nameserver.pm and improve efficiency of zonefile
	data storage and retrieval.

Fix rt.cpan.org #148274
	Multicast DNS flag breaks Net::DNS::Parameters::classbyval

Fix rt.cpan.org #148273
	EDNS extended rcode not handled correctly

Fix rt.cpan.org #147507
	Nameserver.pm: peerhost undefined after $sock->accept


**** 1.37 Mar 13, 2023

	Add links to relevant RFCs in package documentation.

Fix rt.cpan.org #147038
	resolver->axfr( undef ) fails silently

Fix rt.cpan.org #145944
	Case sensitivity issue with AXFR


**** 1.36 Dec 30, 2022

	Adopt JSON as presentation notation for EDNS options.
	Disallow zero packet->id in outbound packet.